samples/_failures_safe/1761325379_046c69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75ffe4af.c: In function ‘main’:
./samples/SAFE/__tmp_75ffe4af.c:178:9: error: expected declaration or statement at end of input
  178 |         }
      |         ^
./samples/SAFE/__tmp_75ffe4af.c:178:9: error: expected declaration or statement at end of input
